CMMP/test/SemanticError/05_UseBeforeInit.c
void main() {
    int64_t b;
    int64_t a;
    b=a+1;

}
